--- a/templates/web/form_create.html
+++ b/templates/web/form_create.html
@@ -17,7 +17,7 @@
    })
 </script>
 
-<form action="{% url 'web_create' model_name=view.kwargs.model_name %}" method="post" enctype="multipart/form-data">
+<form action="{% url 'web_create' model_name=form.instance.model_name %}" method="post" enctype="multipart/form-data">
 <div class="row">
 	<div class="col-sm-12 col-md-12 col-lg-6">
 		<div class="jarviswidget">
@@ -99,6 +99,6 @@
 {% endblock %}
 {% block breadcrumbs %}
 	<ol class="breadcrumb">
-		<li>Forms</li><li>{{ form.instance.verbose_name }}</li><li>Edit</li>
+		<li>Forms</li><li>{{ form.instance.verbose_name }}</li><li>Create</li>
 	</ol>
 {% endblock %}
