--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -153,6 +153,7 @@
                             <a href="#"><!-- <i class="fa fa-lg fa-fw fa-plus"></i> --> {{ category.grouper|capfirst }}</a>
                             <ul>
                                 {% for form_name, form_model in category.list %}
+                                {% if form_model.is_creatable %}
                                 <li id="{{ form_name }}" {% if form.instance.model_name == form_name %}class="active"{% endif %}>
                                     <a href="{% url 'web_create' model_name=form_name %}"><i class="fa fa-lg fa-fw fa-plus"></i> {{ form_model.verbose_name }}</a>
                                 </li>
@@ -160,6 +161,7 @@
                                 <li id="{{ form_name }}_edit" {% if object_list_model.model_name == form_name %}class="active"{% endif %}>
                                     <a href="{% url 'web_list' model_name=form_name %}"><i class="fa fa-lg fa-fw fa-edit"></i> Edit {{ form_model.verbose_name }}</a>
                                 </li>
+                                {% endif %}
                                 {% endif %}
                                 {% endfor %}
                             </ul>
