Disabling sorl-thumbnail for now

--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -1,6 +1,5 @@
 {% load staticfiles %}
 {% load bootstrap3 %}
-{% load thumbnail %}
 <!DOCTYPE html>
 <html lang="en-us">
  
@@ -75,9 +74,7 @@
         .partner-logos { margin-right: 20px; }
         </style>
         <span id="logo">
-            {% thumbnail logo.icon_file 'x50' as im %}
-            <img alt="logotype" class="logo-img" src="{{ im.url }}">
-            {% endthumbnail %}
+            <img alt="logotype" class="logo-img" src="{{ logo.icon_file.url }}">
         </span>
         <div class="pull-right">
             <!-- collapse menu button -->
@@ -94,9 +91,7 @@
         </div><!-- end pulled right: nav area -->
         <span id="logo" class="pull-right partner-logos">
             {% for other_logo in other_logos %}
-                {% thumbnail other_logo.icon_file 'x50' as im %}
-                <img alt="logotype" class="logo-img" src="{{ im.url }}">
-                {% endthumbnail %}
+                <img alt="logotype" class="logo-img" src="{{ other_logo.icon_file.url }}">
             {% endfor %}
         </span>
  
