--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 {% load bootstrap3 %}
+{% load custom_tags %}
 <!DOCTYPE html>
 <html lang="en-us">
  
@@ -113,14 +114,7 @@
  
 
  
-<!--         <div class="btn-header transparent pull-right" id="search-mobile">
-            <span><a href="javascript:void(0)" title="Search"></a></span>
-        </div>
- 
-        <form action="#ajax/search.html" class="header-search pull-right">
-            <input id="search-fld" name="param" placeholder="Find reports and more" type="text"> <a href="javascript:void(0);" id="cancel-search-js" title="Cancel Search"></a>
- 
-        </form> -->
+        {% search_form %}
  
 </header><!-- END HEADER -->
  
