--- a/config_editor/static/css/jqtree.css
+++ b/config_editor/static/css/jqtree.css
@@ -130,10 +130,10 @@ ul.jqtree-tree .jqtree-element {
 ul.jqtree-tree li.jqtree-selected > .jqtree-element,
 ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
     background-color: #97BDD6;
-    background: -webkit-gradient(linear, left top, left bottom, from(#BEE0F5), to(#89AFCA));
-    background: -moz-linear-gradient(top, #BEE0F5, #89AFCA);
-    background: -ms-linear-gradient(top, #BEE0F5, #89AFCA);
-    background: -o-linear-gradient(top, #BEE0F5, #89AFCA);
+    /*background: -webkit-gradient(linear, left top, left bottom, from(#BEE0F5), to(#89AFCA));*/
+    /*background: -moz-linear-gradient(top, #BEE0F5, #89AFCA);*/
+    /*background: -ms-linear-gradient(top, #BEE0F5, #89AFCA);*/
+    /*background: -o-linear-gradient(top, #BEE0F5, #89AFCA);*/
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
 }
 
