--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -56,7 +56,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <script>
             if (!window.jQuery) {
-                document.write('<script src="js/libs/jquery-2.0.2.min.js"><\/script>');
+                document.write('<script src="/static/js/jquery-2.0.2.min.js"><\/script>');
             }
         </script>
     {% block extrahead %}
