--- a/templates/config_editor/complete_page.html
+++ b/templates/config_editor/complete_page.html
@@ -106,6 +106,10 @@ $(document).ready(function(event) {
 	    	// event.preventDefault();
 		}
 	);
+
+	$("[data-confirm]").click(function(event){
+	    return confirm($(this).data("confirm"));
+	});
 });
 </script>
 <div class="row">
@@ -128,8 +132,8 @@ $(document).ready(function(event) {
 			<button class='btn addNode' data-node-type='inline'><span class='glyphicon glyphicon-plus'></span> inline</button>
 			<button class='btn addNode' data-node-type='condition'><span class='glyphicon glyphicon-plus'></span> visible when</button>
 		</div>
-		<a href="{% url 'editor:overwrite_config' %}" class='btn btn-primary'><span class='glyphicon glyphicon-ok'></span> Overwrite config.json</a>
-		<a href="{% url 'editor:reset_changes' %}" class="btn btn-danger">Reset changes</a>
+		<a href="{% url 'editor:overwrite_config' %}" class='btn btn-primary' data-confirm="Are you sure you want to apply the current changes to config.json?"><span class='glyphicon glyphicon-ok'></span> Overwrite config.json</a>
+		<a href="{% url 'editor:reset_changes' %}" class="btn btn-danger" data-confirm="Are you sure you want discard all the current changes?">Reset changes</a>
 	</div>
 </div>
 {% endblock %}
