Drag-and-drop can now be used to change node's parent

--- a/templates/config_editor/complete_page.html
+++ b/templates/config_editor/complete_page.html
@@ -130,7 +130,7 @@ $(document).ready(function(event) {
 					position: event.move_info.position
 		        }),
 				success: function(data) {
-					$('#treeWidget').tree('reload');
+					// $('#treeWidget').tree('reload');
 				}
 		    });
 	    }
