Added a shell script which performs migration automatically

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -25,6 +25,11 @@
                 <a href="{% url 'web_config' %}">Upload config</a>
             </td>
         </tr>
+        <tr>
+            <td>
+                <a href="{% url 'web_config' operation='execute_script' %}">Apply config</a>
+            </td>
+        </tr>
 </table>
 </div>
 
