set_required=False for Bootstrap forms (to prevent troubles with autocomplete fields in Chrome)

--- a/templates/web/form_create.html
+++ b/templates/web/form_create.html
@@ -54,7 +54,7 @@
 
 					<fieldset class="form-horizontal">
 						<legend>{{ object.verbose_name }}</legend>
-						{% bootstrap_form form label_class="col-md-3" field_class="col-md-9" %}
+						{% bootstrap_form form label_class="col-md-3" field_class="col-md-9" set_required=False %}
 
 					</fieldset>
 
