Django REST framework update from 2.x to 3.x

--- a/templates/web/map_view.html
+++ b/templates/web/map_view.html
@@ -1,5 +1,8 @@
 {% extends 'web/base.html' %}
 {% load bootstrap3 %}
+{% block extrahead %}
+<script src="/static/js/markerclusterer.js"></script>
+{% endblock %}
 {% block content %}
 <!-- <div class="row">
 	<div class="col-xs-12 col-sm-7 col-md-7 col-lg-4">
