--- a/templates/config_editor/complete_page.html
+++ b/templates/config_editor/complete_page.html
@@ -1,7 +1,7 @@
 {% extends 'web/base.html' %}
 {% load bootstrap3 %}
 {% block extrahead %}
-<script type="text/javascript" src="http://creativecouple.github.com/jquery-timing/jquery-timing.min.js"></script>
+<script type="text/javascript" src="/static/js/jquery-timing.min.js"></script>
 <script src="/static/js/tree.jquery.js"></script>
 <link rel="stylesheet" href="/static/css/jqtree.css">
 
